--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,6 @@ dependencies {
     compile 'com.tinkerpop:pipes:2.2.0'    
     compile 'com.orientechnologies:orientdb-client:1.3.0'
     compile 'com.orientechnologies:orientdb-enterprise:1.3.0'
-
+    compile  'com.google.guava:guava:12.0'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
