--- a/build.gradle
+++ b/build.gradle
@@ -85,5 +85,6 @@ dependencies {
     compile 'com.orientechnologies:orientdb-client:1.3.0'
     compile 'com.orientechnologies:orientdb-enterprise:1.3.0'
     compile  'com.google.guava:guava:12.0'
+    compile 'com.google.code.crawler-commons:crawler-commons:0.1'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
