--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ buildscript {
 
 repositories {
     mavenCentral()
+    maven{url 'http://download.oracle.com/maven'}
     maven {url 'http://scala-tools.org/repo-releases'}
     maven {url 'https://raw.github.com/rodionmoiseev/maven-repo/master/repo/releases'}
 }
@@ -86,5 +87,10 @@ dependencies {
     compile 'com.orientechnologies:orientdb-enterprise:1.3.0'
     compile  'com.google.guava:guava:12.0'
     compile 'com.google.code.crawler-commons:crawler-commons:0.1'
+
+    compile 'com.thinkaurelius.titan:titan:0.2.0'
+    compile 'com.sleepycat:je:5.0.58'
+
     testCompile group: 'junit', name: 'junit', version: '4.+'
+
 }
