fix for updateStatus, fix for mailto link, performance optimization, stress testing,workaround for npe
--HG--
branch : ver.0.1

--- a/src/main/resources/commons-logging.properties
+++ b/src/main/resources/commons-logging.properties
@@ -1,2 +1,2 @@
 org.apache.commons.logging.Log=org.apache.commons.logging.impl.Log4JLogger
-log4j.logger.httpclient.wire=ERROR
+log4j.logger.httpclient.wire=INFO
