--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'application'
 
 apply plugin: 'scala'
 sourceCompatibility = 1.7
-targetCompatibility=1.7
+targetCompatibility = 1.7
 
 apply plugin: 'java'
 apply plugin: 'idea'
@@ -25,9 +25,9 @@ buildscript {
 
 repositories {
     mavenCentral()
-    maven{url 'http://download.oracle.com/maven'}
-    maven {url 'http://scala-tools.org/repo-releases'}
-    maven {url 'https://raw.github.com/rodionmoiseev/maven-repo/master/repo/releases'}
+    maven { url 'http://download.oracle.com/maven' }
+    maven { url 'http://scala-tools.org/repo-releases' }
+    maven { url 'https://raw.github.com/rodionmoiseev/maven-repo/master/repo/releases' }
 }
 
 
@@ -71,22 +71,32 @@ dependencies {
     scalaTools 'org.scala-lang:scala-library:2.10.0'
     scalaTools 'org.scala-lang:scala-compiler:2.10.0'
     scalaApi 'org.scala-lang:scala-library:2.10.0'
-    
-    compile 'org.apache.httpcomponents:httpclient:4.2.1'
-    compile 'org.jsoup:jsoup:1.6.3'    
-    compile 'com.tinkerpop.gremlin:gremlin-java:2.2.0'
+
     compile 'org.scala-lang:scala-library:2.10.0'
 
-    compile 'com.tinkerpop.blueprints:blueprints-core:2.2.0'
-    compile 'com.tinkerpop:pipes:2.2.0'    
-    compile  'com.google.guava:guava:12.0'
+
+    compile 'org.apache.httpcomponents:httpclient:4.2.1'
+    compile 'org.jsoup:jsoup:1.6.3'
+
+    compile('com.tinkerpop.gremlin:gremlin-java:2.2.0') {
+        exclude group: 'org.codehaus.groovy', module: 'groovy'
+    }
+    compile('com.tinkerpop.blueprints:blueprints-core:2.2.0') {
+        exclude group: 'org.codehaus.groovy', module: 'groovy'
+    }
+    compile('com.tinkerpop:pipes:2.2.0') {
+        exclude group: 'org.codehaus.groovy', module: 'groovy'
+    }
+    compile('com.thinkaurelius.titan:titan:0.2.0') {
+        exclude group: 'org.codehaus.groovy', module: 'groovy'
+    }
+
+
+    compile 'com.google.guava:guava:12.0'
     compile 'com.google.code.crawler-commons:crawler-commons:0.1'
-   
     compile 'org.codehaus.groovy:groovy-all:2.0.6'
-
-    compile 'com.thinkaurelius.titan:titan:0.2.0'
     compile 'com.sleepycat:je:5.0.58'
-
+    compile 'org.mongodb:casbah-core_2.10:2.5.0'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 
 }
