--- a/build.gradle
+++ b/build.gradle
@@ -96,7 +96,10 @@ dependencies {
     compile 'com.google.code.crawler-commons:crawler-commons:0.1'
     compile 'org.codehaus.groovy:groovy-all:2.0.6'
     compile 'com.sleepycat:je:5.0.58'
+    
     compile 'org.mongodb:casbah-core_2.10:2.5.0'
+    compile 'org.mongodb:casbah-gridfs_2.10:2.5.0'
+
     testCompile group: 'junit', name: 'junit', version: '4.+'
 
 }
