thread for carousel, shutdown hook and handling, dirty code for threaded transactions
--HG--
branch : v0.3

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,13 @@ apply plugin: 'idea'
 apply plugin: 'idea-scala'
 
 
+mainClassName = "com.nevilon.nomad.App"
 
+run{
+
+args '/home/hudvin/projects/nomad/seed.txt'
+
+}
 
 buildscript {
     repositories {
