--- a/build.gradle
+++ b/build.gradle
@@ -105,7 +105,9 @@ dependencies {
     
     compile 'org.mongodb:casbah-core_2.10:2.5.0'
     compile 'org.mongodb:casbah-gridfs_2.10:2.5.0'
-
+ 
+    compile 'com.typesafe:config:1.0.0'	
+   
     testCompile group: 'junit', name: 'junit', version: '4.+'
 
 }
