--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -24,6 +24,7 @@ storage{
    backends{
     cassandra{
      host = "127.0.0.1"
+     drop = true
    }
    berkeley{
      directory = /tmp/berkeley
