API facade in progress, dbservice and fsstorage refactoring
--HG--
branch : v0.3

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -17,14 +17,14 @@ storage{
    host = "127.0.0.1"
    port = 27017
    db_name = nomad
-   drop = true
+   drop = false
   }
   titan{
     main_connector = cassandra
    backends{
     cassandra{
      host = "127.0.0.1"
-     drop = true
+     drop = false
    }
    berkeley{
      directory = /tmp/berkeley
