StringGenerator trait for toString
--HG--
branch : v0.3

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -20,7 +20,7 @@ storage{
    drop = false
   }
   titan{
-    main_connector = cassandra
+    main_connector = inmemory
    backends{
     cassandra{
      host = "127.0.0.1"
