getAllFiles, getIncomint,getOutgoing
--HG--
branch : v0.3

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -17,7 +17,7 @@ storage{
    host = "127.0.0.1"
    port = 27017
    db_name = nomad
-   drop = false
+   drop = true
   }
   titan{
     main_connector = inmemory
