dist script, config and profile, profile api, groovy in config, need some refactorign with config
--HG--
branch : v0.3

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,17 @@ apply plugin: 'idea'
 apply plugin: 'idea-scala'
 
 
-mainClassName = "com.nevilon.nomad.App"
+mainClassName = "com.nevilon.nomad.boot.App"
+
+distZip {
+
+into(project.name) {
+        from '.'
+        include 'profiles/'
+}
+
+
+}
 
 run{
 
