build version and name - currently 0.4-snapshot
--HG--
branch : v0.3

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ apply plugin: 'license'
 
 mainClassName = "com.nevilon.nomad.boot.App"
 
+version = '0.4-shapshot'
+
 
 /*
 task updateCopyright(type:Exec){
