--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -11,6 +11,8 @@
 
 log4j.configuration=log4j.properties
 log4j.rootLogger=INFO, stdout
+log4j.logger.com.nevilon.nomad.crawler.Worker=ERROR, stdout
+log4j.logger.com.nevilon.nomad.crawler.Fetcher=ERROR, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %5p [%c] %m%n
