changes in config

--- a/profiles/template/application.conf
+++ b/profiles/template/application.conf
@@ -9,7 +9,7 @@ master {
 }
 links{
    bfs_limit = 5000
-   extracted_links_cache = 200000
+   extracted_links_cache = 20000
 }
 
 storage{
@@ -20,11 +20,11 @@ storage{
    drop = true
   }
   titan{
-    main_connector = inmemory
+    main_connector = cassandra
    backends{
     cassandra{
      host = "127.0.0.1"
-     drop = false
+     drop = true
    }
    berkeley{
      directory = /tmp/berkeley
