a lot of dirty things, sorry

--- a/profiles/template/application.conf
+++ b/profiles/template/application.conf
@@ -20,7 +20,7 @@ storage{
    drop = true
   }
   titan{
-    main_connector = cassandra
+    main_connector = berkeley
    backends{
     cassandra{
      host = "127.0.0.1"
