fix for duplicated lines in stdout

--- a/src/main/resources/commons-logging.properties
+++ b/src/main/resources/commons-logging.properties
@@ -10,4 +10,4 @@
 #
 
 org.apache.commons.logging.Log=org.apache.commons.logging.impl.Log4JLogger
-log4j.logger.httpclient.wire=INFO
+log4j.logger.httpclient.wire=ERROR
