--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,9 +10,11 @@
 #
 
 log4j.configuration=log4j.properties
-log4j.rootLogger=INFO, stdout
-log4j.logger.com.nevilon.nomad.crawler.Worker=ERROR, stdout
-log4j.logger.com.nevilon.nomad.crawler.Fetcher=ERROR, stdout
+log4j.rootLogger=ERROR, stdout
+log4j.logger.com.nevilon.nomad.crawler.Worker=ERROR
+log4j.logger.com.nevilon.nomad.crawler.Fetcher=ERROR
+log4j.logger.com.nevilon.nomad.crawler.Carousel=INFO
+log4j.logger.com.nevilon.nomad.crawler.StatisticsPeriodicalPrinter = INFO
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %5p [%c] %m%n
