keyspace name from config

--- a/profiles/template/application.conf
+++ b/profiles/template/application.conf
@@ -4,12 +4,12 @@ app{
 }
 
 master {
-    workers = 10
+    workers = 1
     threads_in_worker = 10
 }
 links{
-   bfs_limit = 5000
-   extracted_links_cache = 20000
+   bfs_limit = 15000
+   extracted_links_cache = 500000
 }
 
 storage{
@@ -20,11 +20,12 @@ storage{
    drop = true
   }
   titan{
-    main_connector = berkeley
+    main_connector = cassandra
    backends{
     cassandra{
      host = "127.0.0.1"
      drop = true
+     keyspace = nomad
    }
    berkeley{
      directory = /tmp/berkeley
