--- a/profiles/template/application.conf
+++ b/profiles/template/application.conf
@@ -1,6 +1,6 @@
 app{
- default_seed = seed.txt
-
+ seed_file = seed.txt
+ filters_file = filters.groovy
 }
 
 master {
@@ -20,7 +20,7 @@ storage{
    drop = true
   }
   titan{
-    main_connector = cassandra
+    main_connector = inmemory
    backends{
     cassandra{
      host = "127.0.0.1"
