custom header for httpclient, config in application.conf

--- a/profiles/template/application.conf
+++ b/profiles/template/application.conf
@@ -1,6 +1,7 @@
 app{
  seed_file = seed.txt
  filters_file = filters.groovy
+ user_agent = "My cool crawler"
 }
 
 master {
@@ -9,7 +10,7 @@ master {
 }
 links{
    bfs_limit = 15000
-   extracted_links_cache = 500000
+   extracted_links_cache = 200
 }
 
 storage{
