--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ buildscript {
 
 repositories {
     mavenCentral()
+    maven { url 'https://oss.sonatype.org/content/groups/public'}
     maven { url 'http://download.oracle.com/maven' }
     maven { url 'http://scala-tools.org/repo-releases' }
     maven { url 'https://raw.github.com/rodionmoiseev/maven-repo/master/repo/releases' }
@@ -142,6 +143,6 @@ dependencies {
     compile 'org.mongodb:casbah-gridfs_2.10:2.5.0'
  
     compile 'com.typesafe:config:1.0.0'	
-   
+    compile 'com.github.scopt:scopt_2.10:2.1.0'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
