useragent config for robots fetcher and httpclient

--- a/profiles/template/application.conf
+++ b/profiles/template/application.conf
@@ -1,7 +1,14 @@
 app{
  seed_file = seed.txt
  filters_file = filters.groovy
- user_agent = "My cool crawler"
+}
+
+user_agent{
+
+ name = My cool crawler
+ email = "some@email.com"
+ page = "http://page.com"
+
 }
 
 master {
@@ -10,7 +17,7 @@ master {
 }
 links{
    bfs_limit = 15000
-   extracted_links_cache = 200
+   extracted_links_cache = 20000
 }
 
 storage{
