--- a/profiles/template/application.conf
+++ b/profiles/template/application.conf
@@ -12,11 +12,11 @@ user_agent{
 }
 
 master {
-    workers = 1
+    workers = 3
     threads_in_worker = 10
 }
 links{
-   bfs_limit = 15000
+   queue_limit = 15000
    extracted_links_cache = 20000
 }
 
